--- a/hackthonVote/package.json
+++ b/hackthonVote/package.json
@@ -3,15 +3,21 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "nodemon ./bin/www"
+    "start": "gulp"
   },
   "dependencies": {
     "body-parser": "~1.10.2",
+    "connect-livereload": "^0.5.3",
     "cookie-parser": "~1.3.3",
     "debug": "~2.1.1",
     "express": "~4.11.1",
+    "gulp": "^3.8.11",
+    "gulp-express": "^0.3.5",
     "jade": "~1.9.1",
     "morgan": "~1.5.1",
     "serve-favicon": "~2.2.0"
+  },
+  "devDependencies": {
+    "gulp": "^3.8.11"
   }
 }
