--- a/hackthonVote/package.json
+++ b/hackthonVote/package.json
@@ -3,8 +3,7 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "node app.js",
-    "test": "gulp"
+    "start": "gulp"
   },
   "dependencies": {
     "body-parser": "~1.10.2",
@@ -17,6 +16,7 @@
     "serve-favicon": "~2.2.0"
   },
   "devDependencies": {
-    "gulp": "^3.8.11"
+    "gulp": "^3.8.11",
+    "gulp-concat": "^2.5.2"
   }
 }
