--- a/hackthonVote/package.json
+++ b/hackthonVote/package.json
@@ -17,6 +17,8 @@
   },
   "devDependencies": {
     "gulp": "^3.8.11",
-    "gulp-concat": "^2.5.2"
+    "gulp-concat": "^2.5.2",
+    "gulp-rename": "^1.2.2",
+    "gulp-uglify": "^1.2.0"
   }
 }
