--- a/hackthonVote/package.json
+++ b/hackthonVote/package.json
@@ -21,6 +21,7 @@
     "gulp-jshint": "^1.10.0",
     "gulp-rename": "^1.2.2",
     "gulp-uglify": "^1.2.0",
-    "gulp-watch": "~4.2.4"
+    "gulp-watch": "~4.2.4",
+    "gulp-batch": "~1.0.5"
   }
 }
