--- a/hackthonVote/package.json
+++ b/hackthonVote/package.json
@@ -22,6 +22,8 @@
     "gulp-rename": "^1.2.2",
     "gulp-uglify": "^1.2.0",
     "gulp-watch": "~4.2.4",
-    "gulp-batch": "~1.0.5"
+    "gulp-batch": "~1.0.5",
+    "gulp-develop-server": "~0.4.2",
+    "gulp-livereload": "~3.8.0"
   }
 }
