--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "express": "~4.11.1",
     "jade": "~1.9.1",
     "morgan": "~1.5.1",
-    "serve-favicon": "~2.2.0"
+    "serve-favicon": "~2.2.0",
+    "mongojs": "^0.18.1"
   },
   "devDependencies": {
     "gulp": "^3.8.11",
