--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "gulp"
+    "start": "gulp",
+    "postinstall": "./node_modules/bower/bin/bower install"
   },
   "dependencies": {
     "body-parser": "~1.10.2",
@@ -14,7 +15,8 @@
     "jade": "~1.9.1",
     "mongoose": "^4.0.2",
     "morgan": "~1.5.1",
-    "serve-favicon": "~2.2.0"
+    "serve-favicon": "~2.2.0",
+    "bower": "^1.3.12"
   },
   "devDependencies": {
     "gulp": "^3.8.11",
@@ -26,5 +28,6 @@
     "gulp-batch": "~1.0.5",
     "gulp-develop-server": "~0.4.2",
     "gulp-livereload": "~3.8.0"
+    
   }
 }
